# Project-JARVIS

./: .dockerignore  .gitignore  .gitmodules  DOCKER.md  Dockerfile  LICENSE  README.md  docker-build.bat  docker-build.sh  docker-compose.yml  docker-run.bat  docker-run.sh  install.sh  installation-process.txt  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  test_voice_activation.py
examples/: basic_usage.py  cli_usage.py  simple_vad_demo.py  vosk_demo.py
jarvis/: .env.example  __init__.py  cli.py  config.env.template  config.py  llm.py  main.py  supermcp_client.py  terminal_manager.py  voice_activation.py  voice_input.py  voice_output.py
jarvis/core/: __init__.py  command_parser.py  component_factory.py  output_manager.py  system_info.py  voice_manager.py
packaging/: Makefile  README.md  install.sh  jarvis-daemon  jarvis.service  kernel-integration-guide.md
packaging/debian/: control
tests/: __init__.py  conftest.py  test_config_direct.py  test_voice_activation.py
