[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jarvis-ai"
version = "1.0.0"
description = "AI-Native Voice Assistant with Dynamic Capability Discovery"
readme = "README.md"
license = {text = "GPL-3.0"}
authors = [
    {name = "YakupAtahanov", email = "your.email@example.com"},
]
maintainers = [
    {name = "YakupAtahanov", email = "your.email@example.com"},
]
keywords = ["ai", "voice", "assistant", "mcp", "supermcp", "llm", "ollama"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dependencies = [
    "ollama>=0.5.3",
    "openai-whisper>=20250625",
    "piper-tts>=1.3.0",
    "PyAudio>=0.2.14",
    "sounddevice>=0.5.2",
    "SpeechRecognition>=3.14.3",
    "python-dotenv>=1.1.1",
    "mcp[cli]>=1.13.1",
    "httpx>=0.28.1",
    "pathspec>=0.12.1",
    "numpy>=2.2.6",
    "torch>=2.8.0",
    "onnxruntime>=1.22.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
    "myst-parser>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/YakupAtahanov/Project-JARVIS"
Repository = "https://github.com/YakupAtahanov/Project-JARVIS"
Documentation = "https://github.com/YakupAtahanov/Project-JARVIS#readme"
"Bug Tracker" = "https://github.com/YakupAtahanov/Project-JARVIS/issues"

[project.scripts]
jarvis = "jarvis.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["jarvis*"]

[tool.setuptools.package-data]
jarvis = ["*.json", "*.yaml", "*.yml"]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["jarvis"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
